started layout, issue with background image not covering whole screen, needs review

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  height:100%;
+  width:100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,6 +8,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html {
+  height: 100%;
+  width:100%
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -163,4 +171,20 @@ display: inline-block;
 .projects-back{
   background-color: black;
   color: #FFFFF0;
+}
+
+.nav-port{
+  width:50%;
+
+}
+
+.skills{
+ width:50px;
+
+}
+
+
+.desc{
+  color: #FFFFF0;
+  margin-top:50px
 }
